--- a/views/complete.hbs
+++ b/views/complete.hbs
@@ -1,3 +1,5 @@
-Thank you for your purchase
-You have access token 
-{{jwt accessToken}}
+<h1>Thank you for your purchase</h1>
+<div>You have access token</div>
+<pre>{{jwt accessToken}}</pre>
+
+<a href="/">Return</a>
