--- a/views/customer-new.hbs
+++ b/views/customer-new.hbs
@@ -1,5 +1,5 @@
 <h1>Guest Checkout</h1>
-<form action="/checkout/new-user/complete" method="POST">
+<form action="/customer/new/complete" method="POST">
     <label for="firstName">First Name</label>
     <input type="text" name="firstName">
     <label for="lastName">Last Name</label>
