--- a/views/customer.hbs
+++ b/views/customer.hbs
@@ -1,8 +1,33 @@
-<h1>Checkout</h1>
+<div class="col-md-6 order-md-1 mb-4 text-center"><h4 class="mb-3">Do we know you from somewhere?</h4>
+<hr class="mb-4">
+<div class="row text-center">
+    <div class="col-sm-6">
+        <div class="card">
+            <div class="card-body">
+            <h5 class="card-title">I have an account</h5>
+            <p class="card-text text-muted">I'm a regular around here.</p>
+                <a href="/customer/existing" class="card-link">Sign in</a>
+                <a href="/customer/new" class="card-link">Create Account</a>
+            </div>
+        </div>
+    </div>
+    <div class="col-sm-6">
+        <div class="card">
+            <div class="card-body">
+            <h5 class="card-title">I'm a guest</h5>
+            <p class="card-text text-muted">Just passing through...</p>
+                <a href="/customer/guest" class="card-link">Check out</a>
+            </div>
+        </div>
+    </div>
 
-<ul>
-    <li><a href="/customer/existing">Sign in</a></li>
-    <li><a href="/customer/new">Create account</a></li>
-    <li><a href="/customer/guest">Checkout as guest</a></li>    
-    <li><a href="/customer/facebook">Checkout with Facebook</a></li>  
-</ul>
+
+</div>
+<hr class="mb-4">
+<div class="row justify-content-center">
+    <div class="col-sm-6">
+        <i class="fa fa-facebook-square" aria-hidden="true"></i>
+        <a href="/customer/facebook">Checkout with Facebook</a>
+        <div><small class="text-muted">We'll never post without your permission. </small></div>
+</div>
+</div>
