--- a/views/customer-existing.hbs
+++ b/views/customer-existing.hbs
@@ -1,8 +1,21 @@
-<h1>Existing account</h1>
-<form action="/customer/existing/complete" method="POST">
-    <label for="email">Email</label>
-    <input type="email" name="email">
-    <label for="firstName">Password</label>
-    <input type="password" name="password">
-    <button type="submit">Login</button>
-</form>
+{{#if id}}
+    <div class="col-md-6 order-md-1 mb-4 text-center"><h4 class="mb-3">Welcome back, please sign in</h4>
+{{else}}
+    <div class="col-md-6 order-md-1 mb-4 text-center"><h4 class="mb-3">Who are you?</h4>
+{{/if}}
+<hr class="mb-4">
+<div class="row justify-content-center">
+    
+        <form action="/customer/existing/complete" method="POST">
+            <div class="form-group">
+                <label for="email">Email</label>
+                <input class="form-control" type="email" name="email" value={{id}}>
+            </div>
+            <div class="form-group">
+                <label for="firstName">Password</label>
+                <input class="form-control" type="password" name="password">
+            </div>
+            <button class="btn btn-primary" type="submit">Login</button>
+        </form>
+    </div>
+</div>
