--- a/views/customer-new.hbs
+++ b/views/customer-new.hbs
@@ -1,12 +1,24 @@
-<h1>Guest Checkout</h1>
-<form action="/customer/new/complete" method="POST">
-    <label for="firstName">First Name</label>
-    <input type="text" name="firstName">
-    <label for="lastName">Last Name</label>
-    <input type="text" name="lastName">
-    <label for="email">Email</label>
-    <input type="email" name="email">
-    <label for="firstName">Password</label>
-    <input type="password" name="password">
-    <button type="submit">Submit</button>
-</form>
+<div class="col-md-6 order-md-1 mb-4 text-center"><h4 class="mb-3">Let's get to know you</h4>
+    <hr class="mb-4">
+    <div class="row justify-content-center">
+        <form action="/customer/new/complete" method="POST">
+            <div class="form-group">
+                <label for="firstName">First Name</label>
+                <input class="form-control" type="text" name="firstName">
+            </div>
+            <div class="form-group">
+                <label for="lastName">Last Name</label>
+                <input class="form-control" type="text" name="lastName">
+            </div>
+            <div class="form-group">
+                <label for="email">Email</label>
+                <input class="form-control" type="email" name="email" value={{id}}>
+            </div>
+            <div class="form-group">
+                <label for="password">Password</label>
+                <input class="form-control" type="password" name="password">
+            </div>
+            <button class="btn btn-primary" type="submit">Create Account</button>
+        </form>
+    </div>
+</div>
