--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,5 +1,58 @@
-You are currently logged in as {{user.sub}}
+<p class="lead py-5 text-center">This demonstration provides and example of using Okta 
+    Identity for ecommerce applications. Guest users are supported with 
+    registration completing only an email address. Returning guests can be 
+    progressively profiling to full accounts.
+</p>
 
-<a href="/checkout" >click here to checkout</a>
+<div class="col-md-4 order-md-1 mb-4">
+      <h4 class="d-flex justify-content-between align-items-center mb-3">
+        <span class="text-muted">Your cart</span>
+        <span class="badge badge-secondary badge-pill">3</span>
+      </h4>
+      <ul class="list-group mb-3">
+        <li class="list-group-item d-flex justify-content-between lh-condensed">
+          <div>
+            <h6 class="my-0">Flux Capacitor</h6>
+            <small class="text-muted">Only compatible with DMC DeLorean</small>
+          </div>
+          <span class="text-muted">£12</span>
+        </li>
+        <li class="list-group-item d-flex justify-content-between lh-condensed">
+          <div>
+            <h6 class="my-0">Mr Fusion</h6>
+            <small class="text-muted">From waste to power</small>
+          </div>
+          <span class="text-muted">£8</span>
+        </li>
+        <li class="list-group-item d-flex justify-content-between lh-condensed">
+          <div>
+            <h6 class="my-0">Hoverboard</h6>
+            <small class="text-muted">Where we're going we don't need roads</small>
+          </div>
+          <span class="text-muted">£5</span>
+        </li>
+        <li class="list-group-item d-flex justify-content-between bg-light">
+          <div class="text-success">
+            <h6 class="my-0">Promo code</h6>
+            <small>OUTATIME</small>
+          </div>
+          <span class="text-success">-£5</span>
+        </li>
+        <li class="list-group-item d-flex justify-content-between">
+          <span>Total (GBP)</span>
+          <strong>£20</strong>
+        </li>
+      </ul>
 
-<a href="/logout" >click here to logut</a>
+      <form class="card p-2">
+        <div class="input-group">
+          <input type="text" class="form-control" placeholder="Promo code">
+          <div class="input-group-append">
+            <button type="submit" class="btn btn-secondary">Redeem</button>
+          </div>
+        </div>
+      </form>
+      <div class="row justify-content-center"><a class="btn btn-primary btn-lg" href="/checkout" >Continue to checkout <i class="fa fa-shopping-cart" aria-hidden="true"></i>
+</a></div>
+      
+</div>
