--- a/views/customer-existing.hbs
+++ b/views/customer-existing.hbs
@@ -6,16 +6,14 @@
 <hr class="mb-4">
 <div class="row justify-content-center">
     
-        <form action="/customer/existing/complete" method="POST">
+        <form action="/customer/existing/progress" method="POST">
             <div class="form-group">
-                <label for="email">Email</label>
+                <label for="email">Email address</label>
                 <input class="form-control" type="email" name="email" value={{id}}>
             </div>
             <div class="form-group">
-                <label for="firstName">Password</label>
-                <input class="form-control" type="password" name="password">
+                <button class="btn btn-primary" type="submit">Continue</button>
             </div>
-            <button class="btn btn-primary" type="submit">Login</button>
         </form>
     </div>
 </div>
