--- a/views/customer-guest.hbs
+++ b/views/customer-guest.hbs
@@ -3,7 +3,7 @@
     <div class="row justify-content-center">
         <form action="/customer/guest/complete" method="POST">
              <div class="form-group">
-                <label for="email">Email</label>
+                <label for="email">Email address</label>
                 <input class="form-control" type="email" name="email">
             </div>
             <button class="btn btn-primary" type="submit">Submit</button>
