--- a/views/customer-new.hbs
+++ b/views/customer-new.hbs
@@ -11,7 +11,7 @@
                 <input class="form-control" type="text" name="lastName">
             </div>
             <div class="form-group">
-                <label for="email">Email</label>
+                <label for="email">Email address</label>
                 <input class="form-control" type="email" name="email" value={{id}}>
             </div>
             <div class="form-group">
